--- a/.gitlab/auto-deploy-values.yaml
+++ b/.gitlab/auto-deploy-values.yaml
@@ -4,8 +4,7 @@ customResources:
   - apiVersion: networking.k8s.io/v1
     kind: Ingress
     metadata:
-      name: fleetserver-ing
-      namespace: monitor-system
+      name: {{ template "fullname" . }}
       annotations:
         kubernetes.io/ingress.class: traefik
         traefik.ingress.kubernetes.io/router.tls: "false"
