--- a/.gitlab/auto-deploy-values.yaml
+++ b/.gitlab/auto-deploy-values.yaml
@@ -1,2 +1,22 @@
 ingress:
-  className: traefik
+  enabled: false
+customResources:
+  - apiVersion: networking.k8s.io/v1
+    kind: Ingress
+    metadata:
+      name: { { template "fullname" . } }
+      annotations:
+        kubernetes.io/ingress.class: traefik
+        traefik.ingress.kubernetes.io/router.tls: 'false'
+    spec:
+      rules:
+        - host: { { template "hostname" .Values.service.url } }
+          http:
+            paths:
+              - path: /
+                pathType: Prefix
+                backend:
+                  service:
+                    name: { { template "fullname" . } }
+                    port:
+                      number: { { .Values.service.externalPort } }
