--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.0.2",
     "redux-persist": "^6.0.0"
   },
