--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.3.2",
-    "clsx": "^2.0.0",
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.11.1",
+    "clsx": "^2.0.0",
     "eslint-config-airbnb": "^19.0.4",
     "next": "14.0.2",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.48.2",
-    "yup": "^1.3.2",
     "react-redux": "^9.0.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
