--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.11.1",
+    "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "eslint-config-airbnb": "^19.0.4",
     "next": "14.0.2",
