--- a/.env.develop.example
+++ b/.env.develop.example
@@ -1,7 +1,11 @@
-NEXT_PUBLIC_TWITTER_DEVELOPER_API_KEY=TRtTxTYX9MPqYinWmbAJVxmxn
-NEXT_PUBLIC_TWITTER_DEVELOPER_API_KEY_SECRET=J90j6KDmhUPCKVjeop9mEwF6XuBmghxKejkNCprhw2979m6V6R
-NEXT_PUBLIC_TWITTER_DEVELOPER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAANN%2BrQEAAAAAsC4RQ%2FquOHraKz6y5oO6hvkPGEc%3D5C72qWktdVHJ6aXvp0MjkB54wcl0M1GSY30itTplc0wqXbfwHK
-
-
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
 NEXT_PUBLIC_RECAPTCHA_SECRET_KEY=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
+
+NEXT_PUBLIC_TWITTER_CLIENT_ID_KEY=UjZfREtGZlVIelpvS1NrbVhrRkY6MTpjaQ
+NEXT_PUBLIC_TWITTER_CLIENT_ID_KEY_SECRET=2cBkOMjhqyne5eWW15O9HXBDXHi9cI18T41BUIbG8E9mux87TJ
+NEXT_PUBLIC_TWITTER_API_KEY=INGuSX5GyqypSrHclokya8WdT
+NEXT_PUBLIC_TWITTER_API_SECRET_KEY=BXv2Fi8DyVvCkKctIjDOtVM4XoviMVyS7WfYA80pjSgEjRQFBB
+NEXT_PUBLIC_TWITTER_ACCESS_TOKEN=1732573079673708546-zWhOHIJPbyZh3MZOYQW7hDKsdlLE5z
+NEXT_PUBLIC_TWITTER_ACCESS_TOKEN_SECRET=KC1SqWiEj8N3aPigQ4VHLgVXieylJ9h7DhGWh0bqu0BYM
+
+NEXTAUTH_URL=http://localhost:3000
