--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.11.1",
+    "async-mutex": "^0.4.0",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
+    "cookies-next": "^4.1.0",
     "eslint-config-airbnb": "^19.0.4",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
+    "next-redux-wrapper": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
