--- a/.env
+++ b/.env
@@ -9,6 +9,6 @@ NEXT_PUBLIC_TWITTER_ACCESS_TOKEN=1732573079673708546-zWhOHIJPbyZh3MZOYQW7hDKsdlL
 NEXT_PUBLIC_TWITTER_ACCESS_TOKEN_SECRET=KC1SqWiEj8N3aPigQ4VHLgVXieylJ9h7DhGWh0bqu0BYM
 
 NEXTAUTH_URL=http://localhost:3000
-
+NEXTAUTH_SECRET="clout_Dev"
 
 NEXT_PUBLIC_API_URL=https://api.test-internal-clout.lisod.vn/v1/
