--- a/package.json
+++ b/package.json
@@ -20,18 +20,19 @@
     "clsx": "^2.0.0",
     "cookies-next": "^4.1.0",
     "eslint-config-airbnb": "^19.0.4",
+    "moment": "^2.30.0",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-easy-crop": "^5.0.3",
-    "uuid": "^9.0.1",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.48.2",
     "react-quill": "^2.0.0",
     "react-redux": "^9.0.2",
     "redux-persist": "^6.0.0",
+    "uuid": "^9.0.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
