--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,9 +2,22 @@ include:
   - template: Auto-DevOps.gitlab-ci.yml
 
 variables:
-  CI_DEPENDENCY_PROXY_SERVER: ""
+  CI_DEPENDENCY_PROXY_SERVER: ''
 
 build:
-  image: "registry.gitlab.com/gitlab-org/cluster-integration/auto-build-image:v1.49.0"
+  image: 'registry.gitlab.com/gitlab-org/cluster-integration/auto-build-image:v1.49.0'
+  script:
+    - |
+      cp .env.develop.example .env;
+
+      if [[ -z "$CI_COMMIT_TAG" ]]; then
+        export CI_APPLICATION_REPOSITORY=${CI_APPLICATION_REPOSITORY:-$CI_REGISTRY_IMAGE/$CI_COMMIT_REF_SLUG}
+        export CI_APPLICATION_TAG=${CI_APPLICATION_TAG:-$CI_COMMIT_SHA}
+      else
+        export CI_APPLICATION_REPOSITORY=${CI_APPLICATION_REPOSITORY:-$CI_REGISTRY_IMAGE}
+        export CI_APPLICATION_TAG=${CI_APPLICATION_TAG:-$CI_COMMIT_TAG}
+      fi
+    - /build/build.sh
+
 .auto-deploy:
-  image: "registry.gitlab.com/gitlab-org/cluster-integration/auto-deploy-image:v2.64.0"
+  image: 'registry.gitlab.com/gitlab-org/cluster-integration/auto-deploy-image:v2.64.0'
