--- a/.env.develop.example
+++ b/.env.develop.example
@@ -7,6 +7,7 @@ NEXT_PUBLIC_TWITTER_API_KEY=INGuSX5GyqypSrHclokya8WdT
 NEXT_PUBLIC_TWITTER_API_SECRET_KEY=BXv2Fi8DyVvCkKctIjDOtVM4XoviMVyS7WfYA80pjSgEjRQFBB
 NEXT_PUBLIC_TWITTER_ACCESS_TOKEN=1732573079673708546-zWhOHIJPbyZh3MZOYQW7hDKsdlLE5z
 NEXT_PUBLIC_TWITTER_ACCESS_TOKEN_SECRET=KC1SqWiEj8N3aPigQ4VHLgVXieylJ9h7DhGWh0bqu0BYM
+NEXT_PUBLIC_TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAANN%2BrQEAAAAA4As0Npp9hEOGDwCEdTM6pI9yAek%3Dk3gzfvQ6MWQjpKetErCgLBH7oRfscaW4hFoHZOb0d1JIjhdhta
 
 NEXTAUTH_URL=http://localhost:3000
 
