--- a/.env.staging.example
+++ b/.env.staging.example
@@ -10,7 +10,8 @@ NEXT_PUBLIC_TWITTER_ACCESS_TOKEN_SECRET=KC1SqWiEj8N3aPigQ4VHLgVXieylJ9h7DhGWh0bq
 NEXT_PUBLIC_TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAANN%2BrQEAAAAA4As0Npp9hEOGDwCEdTM6pI9yAek%3Dk3gzfvQ6MWQjpKetErCgLBH7oRfscaW4hFoHZOb0d1JIjhdhta
 
 NEXTAUTH_URL=http://localhost:3000
-
+NEXT_PUBLIC_SQUARE_APPLICATIONID=sandbox-sq0idb-1wfWg9L1C4y3cVLtx4c6bQ
+NEXT_PUBLIC_SQUARE_LOACTIONID=LYJN8QYK6BW5H
 
 NEXT_PUBLIC_API_URL=https://api.staging.clout-fi.com/v1/
 
