--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-square-web-payments-sdk": "^3.2.1",
     "redux-persist": "^6.0.0",
     "square": "^33.1.0",
+    "usehooks-ts": "^2.9.5",
     "uuid": "^9.0.1",
     "yup": "^1.3.2"
   },
