--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "async-mutex": "^0.4.0",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "elastic-apm-node": "^4.0.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18",
     "@types/react-google-recaptcha": "^2.1.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
