--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "elastic-apm-node": "^4.0.0",
     "eslint-config-airbnb": "^19.0.4",
     "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.30.0",
     "next": "14.0.2",
     "next-redux-wrapper": "^8.1.0",
