--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "14.0.2",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-easy-crop": "^5.0.3",
     "react-google-recaptcha": "^3.1.0",
