--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.0.2",
     "react-square-web-payments-sdk": "^3.2.1",
+    "recharts": "^2.12.1",
     "redux-persist": "^6.0.0",
     "square": "^33.1.0",
     "usehooks-ts": "^2.9.5",
