--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "square": "^33.1.0",
     "usehooks-ts": "^2.9.5",
     "uuid": "^9.0.1",
+    "wanakana": "^5.3.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
