--- a/package.json
+++ b/package.json
@@ -11,20 +11,24 @@
   },
   "dependencies": {
     "@elastic/apm-rum": "^5.16.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.3.2",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
     "@reduxjs/toolkit": "^2.0.1",
-    "antd": "^5.11.1",
     "async-mutex": "^0.4.0",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "eslint-config-airbnb": "^19.0.4",
+    "js-cookie": "^3.0.5",
     "moment": "^2.30.0",
     "next": "14.0.2",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.48.2",
+    "react-hook-form": "^7.51.3",
     "react-redux": "^9.0.2",
     "redux-persist": "^6.0.0",
     "yup": "^1.3.2"
