--- a/package.json
+++ b/package.json
@@ -1,57 +1,61 @@
 {
-  "name": "clout",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postinstall": "husky install"
-  },
-  "dependencies": {
-    "@elastic/apm-rum": "^5.16.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@hookform/error-message": "^2.0.1",
-    "@hookform/resolvers": "^3.3.2",
-    "@mui/icons-material": "^5.15.15",
-    "@mui/material": "^5.15.15",
-    "@reduxjs/toolkit": "^2.0.1",
-    "async-mutex": "^0.4.0",
-    "axios": "^1.6.2",
-    "dotenv": "^16.3.1",
-    "eslint-config-airbnb": "^19.0.4",
-    "js-cookie": "^3.0.5",
-    "moment": "^2.30.0",
-    "next": "14.0.2",
-    "next-redux-wrapper": "^8.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.3",
-    "react-redux": "^9.0.2",
-    "redux-persist": "^6.0.0",
-    "yup": "^1.3.2"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-csv": "^1.1.10",
-    "@types/react-dom": "^18",
-    "@types/react-google-recaptcha": "^2.1.8",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8.53.0",
-    "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-next": "14.0.2",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "husky": "^8.0.3",
-    "postcss": "^8",
-    "prettier": "^3.1.0",
-    "sass": "^1.69.5",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+    "name": "clout",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
+        "postinstall": "husky install"
+    },
+    "dependencies": {
+        "@ant-design/icons": "^5.3.7",
+        "@elastic/apm-rum": "^5.16.0",
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@hookform/error-message": "^2.0.1",
+        "@hookform/resolvers": "^3.3.2",
+        "@mui/icons-material": "^5.15.15",
+        "@mui/material": "^5.15.15",
+        "@reduxjs/toolkit": "^2.0.1",
+        "antd": "^5.17.2",
+        "async-mutex": "^0.4.0",
+        "axios": "^1.6.2",
+        "dayjs": "^1.11.11",
+        "dotenv": "^16.3.1",
+        "eslint-config-airbnb": "^19.0.4",
+        "js-cookie": "^3.0.5",
+        "moment": "^2.30.0",
+        "next": "14.0.2",
+        "next-redux-wrapper": "^8.1.0",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-hook-form": "^7.51.3",
+        "react-redux": "^9.0.2",
+        "redux-persist": "^6.0.0",
+        "yup": "^1.3.2"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-csv": "^1.1.10",
+        "@types/react-dom": "^18",
+        "@types/react-google-recaptcha": "^2.1.8",
+        "@typescript-eslint/eslint-plugin": "^6.0.0",
+        "@typescript-eslint/parser": "^6.0.0",
+        "autoprefixer": "^10.0.1",
+        "eslint": "^8.53.0",
+        "eslint-config-airbnb-typescript": "^17.1.0",
+        "eslint-config-next": "14.0.2",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.1",
+        "husky": "^8.0.3",
+        "postcss": "^8",
+        "prettier": "^3.1.0",
+        "sass": "^1.69.5",
+        "tailwindcss": "^3.3.0",
+        "typescript": "^5"
+    }
 }
