--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.51.3",
+        "react-infinite-scroll-component": "^6.1.0",
         "react-redux": "^9.0.2",
         "redux-persist": "^6.0.0",
         "yup": "^1.3.2"
