--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "dotenv": "^16.3.1",
         "eslint-config-airbnb": "^19.0.4",
         "js-cookie": "^3.0.5",
-        "moment": "^2.30.0",
+        "moment": "^2.30.1",
         "next": "14.0.2",
         "next-redux-wrapper": "^8.1.0",
         "react": "^18",
@@ -36,6 +36,7 @@
         "react-infinite-scroll-component": "^6.1.0",
         "react-redux": "^9.0.2",
         "redux-persist": "^6.0.0",
+        "socket.io-client": "^4.7.5",
         "yup": "^1.3.2"
     },
     "devDependencies": {
