--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@mui/icons-material": "^5.15.15",
         "@mui/material": "^5.15.15",
         "@reduxjs/toolkit": "^2.0.1",
+        "add": "^2.0.6",
         "antd": "^5.17.2",
         "async-mutex": "^0.4.0",
         "axios": "^1.6.2",
@@ -37,6 +38,7 @@
         "react-redux": "^9.0.2",
         "redux-persist": "^6.0.0",
         "socket.io-client": "^4.7.5",
+        "yarn": "^1.22.22",
         "yup": "^1.3.2"
     },
     "devDependencies": {
